Moved to bonkleagues.io

--- a/quickplay.html
+++ b/quickplay.html
@@ -1,42 +1,3 @@
 ---
-title: 'Bonk.io Quick Play Map Checker'
-desc: 'See the current maps featured in Bonk.io Quick Play rotation.'
-canonical: 'https://bonkleagues.github.io/quickplay.html'
-sel: ''
-scriptToUse: 'qpscript'
+layout: default
 ---
-<style>
-    .cgr{
-        color:green;
-    }
-    .cre{
-        color:red;
-    }
-    .cdg{
-        color:grey;
-    }
-</style>
-<span class="parthead">Maps Currently Featured in Quick Play Rotation</span><br/><br/>
-
-<div id="loading" style="width:200px;text-align:left;white-space: nowrap;margin:0 auto;text-align:center;">loading...</div>
-
-<div id="loaded" style="display:none;">
-    <div id="sorthold" style="margin-bottom:30px;">
-        Sort: 
-        <select id="sel1">
-            <option value="default" selected>Default</option>
-            <option value="ldratio">L/D Ratio</option>
-            <option value="date">Creation Date</option>
-        </select>
-        <select id="sel2">
-            <option value="des">Descending &#9660;</option>
-            <option value="asc" selected>Ascending &#9650;</option>
-        </select>
-    </div>
-    <button id="statstoggle" class="button" style="font-size:20px;padding:8px 15px;animation:none;margin-left:0;margin-bottom:20px;">Show advanced stats</button>
-    <br/><hr/><br/>
-
-    <b>Showing <span id="mapnum">0</span> maps:</b><br/><i style="font-size:12px;" id="ctrlftip">(TIP: you can use CTRL+F to search!)</i><br/><br/>
-</div>
-
-<div id="loadedcont" style="text-align:center;max-width:100%;width:100%;white-space: nowrap;margin:0 auto;display:none"></div>
