--- a/skins.html
+++ b/skins.html
@@ -1,207 +1,3 @@
 ---
-title: 'Bonk Leagues Skin Manager'
-shorttitle: 'Skin Manager'
-desc: 'Save, load, manage and share unlimited amounts of skins for bonk.io.'
-canonical: 'https://bonkleagues.github.io/skins.html'
-sel: 'skins'
-scriptToUse: 'skinscript'
-styleToUse: 'skinstyle'
-specialAds: 'on'
+layout: default
 ---
-<div id="leftBan">
-    <!-- Bonk Leagues left banner -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="2620374158" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-	
-	<!-- BL Leftban Skins 2 -->
-	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5093794174" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-</div>
-
-<div id="rightBan">
-    <!-- Bonk Leagues right banner -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-	
-	<!-- BL Rightban Skins 2 -->
-	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="7192154536" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-</div>
-
-<div id="pageCont">
-    <div id="loggedin">
-        <h1>WELCOME, <span class="s-name">X</span>!<a style="font-style:italic;cursor:pointer;text-decoration:underline;font-size:22px;margin-left:10px;" id="logout">LOGOUT</a></h1><br/><br/>
-        <div id="tagUi"><span class="parthead tabBtn tabSel" id="tabAll">ALL SKINS</span><span id="tabCont"></span></div><br/><br/>
-        <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.<br/><br/></p>
-        <div class="skincont"></div><br/><div class="skinslot" data-skin="addskin" style="margin-right:0px;"><span style="margin-left:20px;">+</span></div>
-        <br/><br/><br/>
-        <p style="font-size:12px;" class="txt-skin2">
-            Info: Skins will apply to your currently active skin slot on Bonk.io.<br/><br/>-<br/>
-            Important: Bonk Leagues Skin Manager uses localstorage to save skins, <br/>
-            meaning skins are saved only in this browser, NOT YOUR BONK ACCOUNT!<br/><br/>
-            <span style="font-weight:bold;font-style:italic">Make sure to backup your skins if you are switching computers<br/>or clearing your browser history!</span><br/><br/><br/>
-            <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="backupall">Backup skins</a>
-        </p>
-    </div>
-
-    <div id="addskin">
-        <span class="parthead">Add skin from...</span><br/><br/>
-        <div class="choice skinchoice" data-choice="4">
-            <img src="static/img/icons/icon4.png" width="64">
-            <div>
-                <b>Use the Bonk Leagues Skin Editor</b><br/>
-                Create a skin with our drag-and-drop editor
-            </div>
-        </div>
-        <div class="choice skinchoice" data-choice="1">
-            <img src="static/img/icons/icon2.png" width="64">
-            <div>
-                <b>My current skin</b><br/>
-                Adds your current skin from bonk.io
-            </div>
-        </div>
-        <div class="choice skinchoice" data-choice="3">
-            <img src="static/img/icons/icon3.png" width="64">
-            <div>
-                <b>Sample skins</b><br/>
-                Pick from a selection of premade skins
-            </div>
-        </div><!--
-        <div class="choice skinchoice" data-choice="2">
-            <img src="static/img/icons/icon1.png" width="64">
-            <div>
-                <b>Enter skin code</b><br/>
-                <span style="font-size:12px">Note: Skin codes will be completely removed soon! Please change your left-over skin codes into links ASAP!</span>
-            </div>
-        </div>-->
-        <br/>
-        <a class="button cancel" data-cancel="addskin" style="font-size:24px;padding:5px 10px;">Cancel</a>
-    </div>
-
-    <div id="addskinslot">
-        <span class="parthead">Select Bonk.io skin slot to add from</span><br/><br/>
-        <div id="bonkslotcont"></div><br/>
-        <a class="button cancel" data-cancel="addskinslot" style="font-size:24px;padding:5px 10px;">Cancel</a>
-    </div>
-
-    <div id="bleditor" style="display:none">
-        <span class="parthead">Bonk Leagues Skin Editor</span><br/><br/>
-        <canvas id="canvas" draggable="false"></canvas>
-    </div>
-
-    <div id="backupPage">
-        <span class="parthead">Backup Skins</span><br/><br/>
-        <i style="font-size:13px;">Info: This section is for importing/exporting skin files to back them up and keep them safe.</i><br/><br/>
-        <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="exportbtn">Export all skins to a file</a><br/><br/>
-        <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="importbtn">Import skins from a file</a>
-        <input type="file" id="importpicker" style="display:none" accept=".blsm"><br/><br/><br/>
-        <a class="button deleteallbtn" style="font-size:24px;padding:5px 10px;animation:none;">Delete all my skins</a><br/><br/><hr/><br/>
-        <a class="button cancel" data-cancel="backupPage" style="font-size:24px;padding:5px 10px;margin-left:-5px;animation:none">Back</a>
-    </div>
-
-    <div id="smpskinscat">
-        <span class="parthead">Sample Skin Categories</span><br/><br/>
-        <div id="smpskincatcont">loading...</div>
-        <br/><br/>
-        <a class="button cancel" data-cancel="smpskinscat" style="font-size:24px;padding:5px 10px;animation:none;margin-left:-5px;">Cancel</a><br/><br/>
-        <p style="font-style:italic;font-size:12px">Info: We are currently not accepting any new submissions for Sample Skins as we are remaking the system. Sorry!</p>
-    </div>
-
-    <div id="smpskins">
-        <span class="parthead"><span id="smpcatid">X</span> Sample Skins</span><br/><br/>
-        <div id="smpskincont">loading...</div>
-        <br/>
-        <a class="button pg" id="pgprev" style="font-size:24px;padding:5px 10px;animation:none;margin-right:20px;">&lt; Prev</a><b>Page <span id="pgid">x/x</span></b><a class="button pg" id="pgnext" style="font-size:24px;padding:5px 10px;animation:none;margin-left:20px;">Next &gt;</a>
-        <br/><br/>
-        <a class="button cancel" data-cancel="smpskins" data-open="smpskinscat" style="font-size:24px;padding:5px 10px;animation:none;margin-left:-5px;">Back</a><br/><br/>
-        <p style="font-style:italic;font-size:12px">Info: We are currently not accepting any new submissions for Sample Skins as we are remaking the system. Sorry!</p>
-    </div>
-
-    <div id="addskin2">
-        <span class="parthead">Adding skin</span><br/><br/>
-        <img class="sknframe sknframebig" id="sknframe4" type="image/svg+xml">
-        <img class="sknframe" id="sknframe2" type="image/svg+xml"><br/><br/>
-        <b>What would you like to name this skin?</b><br/><br/>
-        <input type="text" id="skn" maxlength="30" size="30" value="Skin"><br/>
-        <a id="svskin" class="button" style="font-size:24px;padding:5px 10px;margin-right:15px">Save Skin!</a><a class="button cancel" data-cancel="addskin2" style="font-size:24px;padding:5px 10px;">Cancel</a><br/><br/>
-        <p style="font-style:italic;font-size:12px">Tip: Once this skin is added, hover over it and press 'APPLY' on the button that appears to use it on bonk.io</p>
-    </div>
-
-    <div id="editskin">
-        <span class="parthead">Editing skin</span><br/><br/>
-        <img class="sknframe sknframebig" id="sknframe3" type="image/svg+xml">
-        <img class="sknframe" id="sknframe" type="image/svg+xml"><br/><br/>
-        <a id="openblse" class="button" style="font-size:24px;padding:5px 10px;margin-left:-10px;animation:none;">Open in Skin Editor</a><br/><br/><br/>
-        Skin name: <input type="text" id="skne" maxlength="30" size="30"><br/>
-        Skin slot colour: <input type="text" maxlength="7" size="7" id="sslotcol" class="jscolor {value:'fb016e', width:200, height:150, padding:0, borderWidth:0, backgroundColor:'transparent', hash:true}">
-        <a style="font-style:italic;cursor:pointer;text-decoration:underline;font-size:18px;margin-left:10px;" id="resetcol">reset</a><br/>
-        Tags: <input type="text" id="skntags"><br/><br/>
-        <a id="edskin" class="button" style="font-size:28px;padding:5px 10px;animation:none;">Save!</a><br/><br/>
-        <p>
-            <a class="button cancel" data-cancel="editskin" style="font-size:24px;padding:5px 10px;animation:none;">Cancel</a>
-            <a id="delskin" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Delete Skin</a>
-        </p>
-    </div>
-
-    <div id="shareskin">
-        <span class="parthead">Share your skin</span><br/><br/>
-        <i style="font-size:13px;">Info: By sending a Skin Sharing link, you are <b style="text-decoration:underline">sharing</b> meaning whoever you give these codes to will be able to <b style="text-decoration:underline">use your skin</b>.</i>
-        <br/><br/>
-        <span id="genlink" style="font-size:24px">loading...</span>
-        <br/><br/>
-        <p id="genstats" style="font-size:16px">Your skin share link has been clicked <span id="genstatscount" style="color:#fb016e;font-weight:bold">x</span> time(s)!</p>
-        <!--<b>or</b><br/>
-        <a id="skncode" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-top:15px;">Get Skin Code</a>-->
-        <br/><hr/><br/>
-        <span class="parthead">Show your skin</span><br/><br/>
-        <b>Generated Skin Image:</b><br/>
-        <i style="font-size:13px;">Info: If sharing to Discord or other social media, <b style="text-decoration:underline">use 'Copy image' instead of 'Copy image address'.</b></i>
-        <br/><br/>
-        <span id="genskni-l">loading...</span>
-        <img style="display:none;" id="genskni" onload="$('#genskni-l').hide();$('#genskni').fadeIn();">
-
-        <br/><br/>
-        <a class="button cancel" data-cancel="shareskin" style="font-size:24px;padding:5px 10px;margin-left:-5px;animation:none">Back</a>
-    </div>
-
-    <div id="shared">
-        <span class="parthead">A skin has been shared with you!</span><br/><br/>
-        <b class="sharedby">Unknown</b> has shared their skin "<b class="sharedname">Unknown</b>" with you!<br/><br/>
-        <img id="sharedimg"><br/><br/>
-        <i>Do you want to add it to your Skin Manager saved skins?</i><br/>
-        <a id="sharedyes" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-top:15px;">Yes!</a>
-        <a id="sharedno" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-top:15px;">Nope</a>
-    </div>
-
-    <div id="instructions">
-        <span class="parthead" id="insthead">Login</span><br/><br/>
-        <input type="text" id="un" maxlength="50" size="30" placeholder="Bonk.io username"><br/>
-        <input type="password" id="pw" maxlength="64" size="30" placeholder="Bonk.io password"><br/>
-
-        <input type="checkbox" id="rm" name="rm" class="cb">
-        <label for="rm" class="cblabel">Remember me</label><br/><br/>
-
-        <p id="errtxt" style="font-style:italic;font-size:12px"></p>
-        <br/>
-    </div>
-    <a id="button" class="button" data-next="loggedin">Login with Bonk.io</a>
-    <br/><br/><br/><hr/><br/>
-    <div id="info">
-        <span class="parthead">Info</span><br/>
-        <p style="font-weight:bold;">Welcome to the Bonk Leagues Skin Manager! To start, log in above.</p>
-        <p>Here you can save, load, manage and share unlimited amounts of skins for bonk.io.</p>
-        <p>You can also store multiple skins and transfer them across accounts!</p><br/>
-        <iframe style="max-width:560px;height:315px;width:100%;" src="https://www.youtube.com/embed/xsHMOzYOAEA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br/>
-        <br/><br/>
-        <span class="parthead">Feedback</span><br/>
-        <p>If you have ANY ideas, encounter a bug, or want to give feedback, feel free to tell us in <a href="https://discord.gg/RadQ7xx" target="_blank">our Discord server.</a></p>
-    </div>
-
-    <div id="statusbar"></div>
-    <div id="overlay"></div>
-
-    <script data-playerPro="current"></script>
-    <a id="skipButton" class="button" style="font-size:32px;padding:10px 20px;animation:none;margin-top:15px;position:fixed;top:10px;right:25px;display:none;z-index:9999">Skip Ad</a>
-
-    <script>cpmstarAPI({ kind:"game.createInterstitial" });</script>
