--- a/404.html
+++ b/404.html
@@ -1,7 +1,3 @@
 ---
-permalink: /404.html
-sel: ''
+layout: default
 ---
-<span class="parthead">Error 404: Page not found</span><br/>
-<div id="e404">404</div><br/>
-Oops, seems like you've gone to a page that doesn't exist!<br/>
