--- a/editor.html
+++ b/editor.html
@@ -1,54 +1,3 @@
 ---
-title: 'Bonk Leagues Skin Editor'
-shorttitle: 'Skin Editor'
-desc: 'The best way to make bonk.io skins, with a drag-and-drop skin editor for bonkio.'
-canonical: 'https://bonkleagues.github.io/editor.html'
-sel: 'editor'
-scriptToUse: 'editorpagescript'
+layout: default
 ---
-<style>
-    section{
-        padding:0;
-        padding-top:1px;
-    }
-    #mainCont{
-        width:100%;
-        height:850px;
-        text-align:left;
-    }
-    #framebox{
-        display:inline-block;
-        width:calc(100% - 162px);
-        height:100%;
-        vertical-align:top;
-    }
-    #rightBan{
-        width:160px;
-        height:600px;
-        display:inline-block;
-        vertical-align:top;
-        margin-left:2px;
-    }
-    iframe{
-        width:100%;
-        height:100%;
-        border:0;
-    }
-    @media screen and (max-width: 1250px) {
-        #rightBan{
-            display:none;
-        }
-        #framebox{
-            width:100%;
-        }
-    }
-</style>
-
-
-
-<div id="mainCont">
-    <div id="framebox"></div><div id="rightBan"><!-- Bonk Leagues right banner --><ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996"></ins><script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
-</div>
-
-<script data-playerPro="current"></script>
-<script>cpmstarAPI({ kind:"game.createInterstitial" });</script>
