--- a/index.html
+++ b/index.html
@@ -1,44 +1,3 @@
 ---
-
+layout: default
 ---
-
-<!--<a href="client.html"><img src="static/img/thumbnails/thumb1.png" class="homethumb"></a>-->
-<a href="skins.html"><img src="static/img/thumbnails/thumb2.png" class="homethumb"></a>
-<a href="editor.html"><img src="static/img/thumbnails/thumb5.png" class="homethumb"></a>
-<a href="xpchecker.html"><img src="static/img/thumbnails/thumb4.png" class="homethumb"></a>
-<a href="quickplay.html"><img src="static/img/thumbnails/thumb6.png" class="homethumb"></a>
-<a href="more.html"><img src="static/img/thumbnails/thumb3.png" class="homethumb"></a>
-
-<br/><br/><hr/><br/>
-
-<span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
-
-<b>Bonk Leagues is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>
-- Create and edit skins with revolutionary drag-and-drop controls with our <a href="editor.html">Skin Editor</a>,<br/>
-- Manage, save and share unlimited skins with ease with our <a href="skins.html">Skin Manager</a>,<br/>
-- Easily see a player's XP with our <a href="xpchecker.html">XP Checker</a>,<br/>
-<i>- And use many more tools for your bonk.io needs... (see the menu above)</i>
-
-
-<br/><br/><hr/><br/>
-
-<a href="bonk_discord.html"><span class="parthead" style="background:#7289da;font-size:30px;">Join the Discord Server!</span></a>
-
-<br/><br/><hr/><br/><span class="parthead">Our Team</span><br/><br/>
-
-Here are the people behind making Bonk Leagues and related content:<br/><br/>
-<div class="sampleskin">
-    <img class="sknframe" src="static/img/avatars/finbae.png">
-    <div>
-        <b>Finbae</b><span style="font-size:12px;color:#7289da;">#4423</span><br/><i>Frontend &amp; Web Dev</i>
-    </div>
-</div>
-<div class="sampleskin">
-    <img class="sknframe" src="static/img/avatars/its_magic.png">
-    <div>
-        <b>PitsPower</b><span style="font-size:12px;color:#7289da;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
-    </div>
-</div>
-<br/><br/>
-Contact us: <b><a href="mailto:hi@bonkleagues.io" target="_blank">hi@bonkleagues.io</a></b>
-<br/><br/>
